examples/tests/valid/optionals.w
let b: num? = nil;
let a: num? = 5;

inflight f(x: num?) {
  // do something
}

f(a);
f(b);
f(5);
f(nil);
f();
